# SoundBridge

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml
docs/: architecture.md  compatibility-reports.md  daw-integration.md  file-grant-approval-broker.md  native-editor-broker.md  open-standard.md  protocol-file-grants.md  protocol.md  roadmap.md  security-review.md  security.md
examples/browser-demo/: index.html
examples/browser-demo/src/: app.js  bridge-monitor-events.js  capability-status.js  file-grant-actions.js  plugin-browser.js  realtime-stats.js  styles.css  vst3-program-data-controls.js
native/bridge-daemon/: CMakeLists.txt  README.md
native/bridge-daemon/include/SoundBridge/: AudioUnitHostWorkerSupport.h  Base64.h  Lv2HostWorker.h  Lv2HostWorkerSupport.h  Lv2HostedPluginStateSupport.h  NativeAudioJson.h  NativeFileGrantSupport.h  NativePlugin.h  Vst3Host.h  Vst3HostWorkerSupport.h  Vst3HostedEffect.h
native/bridge-daemon/src/: AudioUnitHostWorker.cpp  AudioUnitHostWorkerSupport.cpp  AudioUnitHostedEffect.cpp  AudioUnitScanner.cpp  Base64.cpp  ExampleInstrumentBundleMain.cpp  ExampleInstrumentRenderer.cpp  ExampleLv2GainPlugin.cpp  Lv2HostWorker.cpp  Lv2HostWorkerSupport.cpp  Lv2HostedPlugin.cpp  Lv2HostedPluginStateSupport.cpp  Lv2MetadataSupport.cpp  Lv2Scanner.cpp  NativeAudioJson.cpp  NativeFileGrantSupport.cpp  NativePlugin.cpp  Vst3BusLayoutSupport.cpp  Vst3HostWorker.cpp  Vst3HostWorkerSupport.cpp  Vst3HostedEffect.cpp  Vst3PluginMetadataSupport.cpp  Vst3ProgramDataSupport.cpp  Vst3Scanner.cpp  main.cpp
native/example-plugins/LV2/soundbridge-example-gain.lv2/: SoundBridgePlugin.json  manifest.ttl  soundbridge-example-gain.ttl
native/example-plugins/LV2/soundbridge-unsupported-option.lv2/: manifest.ttl  soundbridge-unsupported-option.ttl
native/example-plugins/LV2/soundbridge-unsupported-required.lv2/: manifest.ttl  soundbridge-unsupported-required.ttl
scripts/: binary-audio-frames-smoke.mjs  binary-audio-frames.mjs  browser-demo-engine-control-smoke.mjs  browser-smoke.mjs  check-file-sizes.mjs  daemon-au-host-profiles.mjs  daemon-config.mjs  daemon-control-events.mjs  daemon-editors.mjs  daemon-file-grant-operations-smoke.mjs  daemon-file-grant-operations.mjs  daemon-file-grants.mjs  daemon-instance-file-grants.mjs  daemon-instrument-rendering.mjs  daemon-lifecycle.mjs  daemon-midi-event-encoding.mjs  daemon-mock-instruments.mjs  daemon-normalizers.mjs  daemon-parameter-snapshots.mjs  daemon-plugin-catalog.mjs  daemon-render-diagnostics-smoke.mjs  daemon-render-diagnostics.mjs  daemon-request-handler.mjs  daemon-security-helpers.mjs  daemon-vst3-program-data.mjs  daemon-websocket-server.mjs  daemon-worker-security.mjs  file-grant-approval-broker-fixture.mjs  file-grant-approval-broker-process.mjs  file-grant-approval-broker-smoke.mjs  installed-plugin-probe-events.mjs  installed-plugin-probe-file-grants.mjs  installed-plugin-probe-formats.mjs  installed-plugin-probe-layouts.mjs  installed-plugin-probe-midi.mjs  installed-plugin-probe-parameters.mjs  installed-plugin-probe-programs.mjs  installed-plugin-probe-render-payload.mjs  installed-plugin-probe-rendering.mjs  installed-plugin-probe-reporting.mjs  (+58 more)
